FullQa New/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Customer_Contact_Type__c</fullName>
        <label>Customer Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Service Notification</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Forecast__c</fullName>
        <description>IF(ISPICKVAL (Type , &quot;Asset - Internal (EA)&quot;),  Opportunity_Forecast__c *0.03,null)</description>
        <formula>IF(ISPICKVAL (Type , &quot;Asset - Internal (EA)&quot;),  Lead_Goals__c *0.08 *0.08,
IF(ISPICKVAL (Type , &quot;Webinar - Internal (WB)&quot;),  Lead_Goals__c *0.12 *0.09,
IF(ISPICKVAL (Type , &quot;Webinar - 3rd Party (WB)&quot;),  Lead_Goals__c *0.16 *0.01,
IF(ISPICKVAL (Type , &quot;Tradeshow (TS)&quot;),  Lead_Goals__c *0.12 *0.04,
IF(ISPICKVAL (Type , &quot;User Group (UG)&quot;),  Lead_Goals__c *0.30 *0.04,
IF(ISPICKVAL (Type , &quot;Outbound Call (OC)&quot;),  Lead_Goals__c *0.01 *0.015,
IF(ISPICKVAL (Type , &quot;Asset - 3rd party (EA)&quot;),  Lead_Goals__c *0.08 *0.02,null)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <description>Used on Tradeshow campaigns
Integrated: No
Level: 0
Marketing: Yvonne</description>
        <label>Department Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>241 - Developer Relations</fullName>
                </value>
                <value>
                    <fullName>300 - New Sales - Leaders &amp; Ops</fullName>
                </value>
                <value>
                    <fullName>350 - Existing Sales - Leaders &amp; Ops</fullName>
                </value>
                <value>
                    <fullName>400 - Marketing</fullName>
                </value>
                <value>
                    <fullName>407 -  Marketing - Telecom</fullName>
                </value>
                <value>
                    <fullName>480 - Excise Marketing</fullName>
                </value>
                <value>
                    <fullName>402 - Marketing- Leadership</fullName>
                </value>
                <value>
                    <fullName>330 - Sales - Established</fullName>
                </value>
                <value>
                    <fullName>380 - Sales - Enterprise</fullName>
                </value>
                <value>
                    <fullName>304 - Sales - Emerging &amp; Launch</fullName>
                </value>
                <value>
                    <fullName>306 - Sales – SOHO</fullName>
                </value>
                <value>
                    <fullName>353 - Existing Sales - Sales</fullName>
                </value>
                <value>
                    <fullName>320 - Partner Sales</fullName>
                </value>
                <value>
                    <fullName>302 - Other S&amp;M - Telecom GM</fullName>
                </value>
                <value>
                    <fullName>465 - Marketing - Technology (MTG)</fullName>
                </value>
                <value>
                    <fullName>470 - Marketing - Demand Gen &amp; Ops</fullName>
                </value>
                <value>
                    <fullName>471 - Marketing - CertCapture</fullName>
                </value>
                <value>
                    <fullName>472 - Marketing - SOHO</fullName>
                </value>
                <value>
                    <fullName>473 - Marketing – Accounting Channel Partner</fullName>
                </value>
                <value>
                    <fullName>474 - Marketing - Established &amp; SIG Partner</fullName>
                </value>
                <value>
                    <fullName>475 - Marketing - Emerging &amp; Launch Partner</fullName>
                </value>
                <value>
                    <fullName>476 - Marketing – SOHO Partner</fullName>
                </value>
                <value>
                    <fullName>477 - Marketing - Product Marketing</fullName>
                </value>
                <value>
                    <fullName>478 - Marketing - Existing Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Development_Ticket_1_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://jira.avalara.com/browse/&quot;&amp; Development_Ticket_1__c,Development_Ticket_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Development Ticket 1 (Link)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Ticket_1__c</fullName>
        <label>Development Ticket 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Ticket_2_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://jira.avalara.com/browse/&quot;&amp; Development_Ticket_2__c,Development_Ticket_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Development Ticket 2 (Link)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Ticket_2__c</fullName>
        <label>Development Ticket 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Ticket_3_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://jira.avalara.com/browse/&quot;&amp; Development_Ticket_3__c,Development_Ticket_3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Development Ticket 3 (Link)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Ticket_3__c</fullName>
        <label>Development Ticket 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DingCount__c</fullName>
        <label>Ding Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DrayageActual__c</fullName>
        <description>The actual drayage feels associated with the event</description>
        <inlineHelpText>The actual drayage feels associated with the event</inlineHelpText>
        <label>Drayage (Actual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DrayageBudget__c</fullName>
        <description>The budgeted drayage fees for the event</description>
        <inlineHelpText>The budgeted drayage fees for the event</inlineHelpText>
        <label>Drayage (Budget)</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duration_Days__c</fullName>
        <formula>EndDate - StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration(Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EIAB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be  checked if Sponsorship value (Actual) from 2016 is $3000 or less
Marketing: Yvone Lunceford IBST-1967</description>
        <inlineHelpText>Should be  checked if Sponsorship value (Actual) from 2016 is $3000 or less</inlineHelpText>
        <label>EIAB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_eCommerce__c</fullName>
        <description>Which ERP or ecommerce audience was targeted in this campaign.</description>
        <label>ERP / eCommerce</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AccountMate</fullName>
                </value>
                <value>
                    <fullName>BizAutomation</fullName>
                </value>
                <value>
                    <fullName>Blackbaud</fullName>
                </value>
                <value>
                    <fullName>BV Software</fullName>
                </value>
                <value>
                    <fullName>CMS i5</fullName>
                </value>
                <value>
                    <fullName>Cyrious</fullName>
                </value>
                <value>
                    <fullName>Datatel</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know</fullName>
                </value>
                <value>
                    <fullName>eBay ProStores</fullName>
                </value>
                <value>
                    <fullName>Epicor Avante</fullName>
                </value>
                <value>
                    <fullName>Epicor CRS</fullName>
                </value>
                <value>
                    <fullName>Epicor Enterprise</fullName>
                </value>
                <value>
                    <fullName>Epicor Manage2000</fullName>
                </value>
                <value>
                    <fullName>Epicor ManFact</fullName>
                </value>
                <value>
                    <fullName>Epicor Vantage</fullName>
                </value>
                <value>
                    <fullName>Everest</fullName>
                </value>
                <value>
                    <fullName>Exact Macola ES</fullName>
                </value>
                <value>
                    <fullName>Exact Macola Globe</fullName>
                </value>
                <value>
                    <fullName>Exact Macola MAX</fullName>
                </value>
                <value>
                    <fullName>Exact Macola Progression</fullName>
                </value>
                <value>
                    <fullName>Exigo</fullName>
                </value>
                <value>
                    <fullName>IBS ASW</fullName>
                </value>
                <value>
                    <fullName>Infor ERP A+</fullName>
                </value>
                <value>
                    <fullName>Infor ERP Enspire</fullName>
                </value>
                <value>
                    <fullName>Infor ERP FACTS</fullName>
                </value>
                <value>
                    <fullName>Infor ERP LN (BAAN)</fullName>
                </value>
                <value>
                    <fullName>Infor ERP LX (BPCS/PRMS)</fullName>
                </value>
                <value>
                    <fullName>Infor ERP SX.e</fullName>
                </value>
                <value>
                    <fullName>Infor ERP Syteline</fullName>
                </value>
                <value>
                    <fullName>Infor ERP VISUAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EZTax_Migration_Campaign_ID__c</fullName>
        <label>EZTax Migration Campaign ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Segment__c</fullName>
        <label>Eloqua Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeesAttending__c</fullName>
        <description>The Avalara employees that are attending this event</description>
        <inlineHelpText>The Avalara employees that are attending this event</inlineHelpText>
        <label>Employees Attending</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventCostActual__c</fullName>
        <formula>DrayageActual__c + FreightActual__c + LaborActual__c + MiscOnSiteActual__c + SponsorshipFeeActual__c +  Print_Cost_Actual__c +  Promotions_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Cost (Actual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventCostBudget__c</fullName>
        <description>The Budget cost of the event</description>
        <formula>Event_Budgeted_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is not an aggregate of the budgeted fees listed above.  This field is set to equal the value of the Budgeted Cost field.</inlineHelpText>
        <label>Event Cost (Budget)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventEndDate__c</fullName>
        <description>The date that the event ends</description>
        <inlineHelpText>Enter the day that the event ends in short date format (10/12/2010)</inlineHelpText>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventStartDate__c</fullName>
        <description>The date that the event begins</description>
        <inlineHelpText>Enter the date of the first day of the event.  If this is an estimated date, make sure to check the &apos;Actual Date TBD&apos; checkbox.  If entering an actual event start date, make sure &apos;Actual Date TBD&apos; is unchecked.</inlineHelpText>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventType__c</fullName>
        <description>The target audience the event is geared towards
Label Update: IBST-16664</description>
        <inlineHelpText>The target audience the event is geared towards</inlineHelpText>
        <label>Target Audience Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventURL__c</fullName>
        <description>The website associated with the TradeShow</description>
        <inlineHelpText>Enter the website associated with the TradeShow</inlineHelpText>
        <label>Event URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event_Budgeted_Cost__c</fullName>
        <label>Event Budgeted Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Logistics_Notes__c</fullName>
        <description>Details about  tradeshow logistic</description>
        <inlineHelpText>Details about  tradeshow logistic</inlineHelpText>
        <label>Event Logistics Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Purpose__c</fullName>
        <description>New Tradeshow Fields
Integrated: No
Marketing: Yvonne</description>
        <label>Event Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead Gen</fullName>
                </value>
                <value>
                    <fullName>Relationship/Partner Commitment</fullName>
                </value>
                <value>
                    <fullName>Partner Attendees Only</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Branding Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Summary_Page__c</fullName>
        <description>Create Request: IBST-16664</description>
        <label>Event Summary Page</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Time_Date__c</fullName>
        <label>Event Start Time/Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Time_Zone__c</fullName>
        <label>Event Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT-10:00) Hawaii</fullName>
                </value>
                <value>
                    <fullName>(GMT-09:00) Alaska</fullName>
                </value>
                <value>
                    <fullName>(GMT-08:00) Pacific Time (US and Canada)</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Mountain Time (US and Canada)</fullName>
                </value>
                <value>
                    <fullName>(GMT-05:00) Eastern Time (US and Canada)</fullName>
                </value>
                <value>
                    <fullName>(GMT) London</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Events_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to User in Salesforce
Integrated: No
Level 0
Marketing: Yvonne</description>
        <label>Events Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Excise_Tax_Division_Type__c</fullName>
        <label>Excise Tax Division Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Award</fullName>
                </value>
                <value>
                    <fullName>Banner Ads</fullName>
                </value>
                <value>
                    <fullName>Customer Event</fullName>
                </value>
                <value>
                    <fullName>Eloqua Email</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>FQ Event</fullName>
                </value>
                <value>
                    <fullName>Invite Mailout</fullName>
                </value>
                <value>
                    <fullName>Lead Generation</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Press Release</fullName>
                </value>
                <value>
                    <fullName>Seminar / Conference</fullName>
                </value>
                <value>
                    <fullName>Speaking Proposal</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FreightActual__c</fullName>
        <description>The actual freight fees associated with the event</description>
        <inlineHelpText>inbound/outbound shipments</inlineHelpText>
        <label>Freight (Actual)</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FreightBudget__c</fullName>
        <description>The budgeted freight cost of the event</description>
        <inlineHelpText>inbound/outbound shipments</inlineHelpText>
        <label>Freight (Budget)</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <description>For tradeshow campaigns
Integrated: No
Level 0
Marketing: Yvonne</description>
        <label>GL Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7201 - Advertising and Marketing</fullName>
                </value>
                <value>
                    <fullName>7210 - Online Marketing</fullName>
                </value>
                <value>
                    <fullName>7227 - Advertising-SEM/PPC</fullName>
                </value>
                <value>
                    <fullName>7229 - List Purchases</fullName>
                </value>
                <value>
                    <fullName>7231 Partner Programs</fullName>
                </value>
                <value>
                    <fullName>7247 Channel Partner Events (User Groups)</fullName>
                </value>
                <value>
                    <fullName>7249 Customer Events</fullName>
                </value>
                <value>
                    <fullName>7264 - Marketing Agency</fullName>
                </value>
                <value>
                    <fullName>7270 - Telemarketing</fullName>
                </value>
                <value>
                    <fullName>7280 International Marketing</fullName>
                </value>
                <value>
                    <fullName>7290 - Outsourced Lead Generation</fullName>
                </value>
                <value>
                    <fullName>7217- Promotions/Partner Rewards</fullName>
                </value>
                <value>
                    <fullName>7230- Advertising Promotions</fullName>
                </value>
                <value>
                    <fullName>7231- Partner Programs</fullName>
                </value>
                <value>
                    <fullName>7235 - Collateral</fullName>
                </value>
                <value>
                    <fullName>7240-Trade Show Booth</fullName>
                </value>
                <value>
                    <fullName>7247-Events - Third Party</fullName>
                </value>
                <value>
                    <fullName>7249-Events - Company Hosted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandparent_Campaign_Name__c</fullName>
        <description>Used for reporting on Campaign Hierarchies</description>
        <formula>Parent.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grandparent Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Great_Grandparent_Campaign__c</fullName>
        <formula>Parent.Parent.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Great Grandparent Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industries__c</fullName>
        <label>Excise Industries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carriers</fullName>
                </value>
                <value>
                    <fullName>Distributors</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Fleet</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>New Tradeshow Fields
Integrated: No
Marketing: Yvonne</description>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retail &amp; Ecommerce</fullName>
                </value>
                <value>
                    <fullName>Small Business and Business Services</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Distribution/Wholesale</fullName>
                </value>
                <value>
                    <fullName>Software &amp; Technology</fullName>
                </value>
                <value>
                    <fullName>Scale Partners</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JIRA_Ticket__c</fullName>
        <label>JIRA Ticket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LaborActual__c</fullName>
        <description>The actual labor fees associated with the event</description>
        <inlineHelpText>includes labor and supervision</inlineHelpText>
        <label>Exhibit house services (Actual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LaborBudget__c</fullName>
        <description>The budgeted labor costs of the event</description>
        <inlineHelpText>Includes labor and supervision</inlineHelpText>
        <label>Exhibit house services (Budget)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Goals__c</fullName>
        <description>The goal for the number of Leads to be generated by a Campaign
Label Update: IBST-16664</description>
        <inlineHelpText>The goal for the number of Leads to be generated by a Campaign</inlineHelpText>
        <label>Num of Expected Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Back_Dated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back-Dated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Attribution__c</fullName>
        <label>LD LT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Bookings_Attribution__c</fullName>
        <label>LD LT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Generated_Attribution__c</fullName>
        <label>LD LT Generated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Generated_Bookings_Attribution__c</fullName>
        <label>LD LT Generated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Accelerated_Attribution__c</fullName>
        <label>LD MT Accelerated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Accelerated_Bookings_Attr__c</fullName>
        <label>LD MT Accelerated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Generated_Attribution__c</fullName>
        <label>LD MT Generated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Generated_Bookings_Attribution__c</fullName>
        <label>LD MT Generated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Average_Days_To_Close__c</fullName>
        <label>Reporting Average Days to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Bookings_Attribution__c</fullName>
        <label>LD MT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Campaign_Member_Totals__c</fullName>
        <label>Reporting Campaign Member Totals</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>